[FIX] Call method speed-up of the listener registery